test/negative/lex_bad_escape.mut
# Negative: unknown escape sequence in string
x: str = "hello\q"
